Fix service name in centos

--- a/moduleroot/spec/acceptance/nodesets/centos-65-x64-docker.yml
+++ b/moduleroot/spec/acceptance/nodesets/centos-65-x64-docker.yml
@@ -17,7 +17,7 @@ HOSTS:
     docker_cmd:
       - 'sh'
       - '-c'
-      - 'service ssh start; tail -f /dev/null'
+      - 'service sshd start; tail -f /dev/null'
 CONFIG:
   log_level: debug
   type: git
