--- a/moduleroot/Rakefile
+++ b/moduleroot/Rakefile
@@ -18,11 +18,12 @@ task :librarian_spec_prep do
 end
 task :spec_prep => :librarian_spec_prep
 
+<% lint_disable_checks = (@configs['lint_disable_checks']||[]) + ['80chars', 'class_inherits_from_params_class'] -%>
 Rake::Task[:lint].clear # workaround https://github.com/rodjek/puppet-lint/issues/331
 PuppetLint.configuration.relative = true # https://github.com/rodjek/puppet-lint/pull/334
 PuppetLint::RakeTask.new :lint do |config|
   config.pattern = 'manifests/**/*.pp'
-  config.disable_checks = ['80chars', 'class_inherits_from_params_class']
+  config.disable_checks = <%= lint_disable_checks %>
   config.fail_on_warnings = true
   # config.relative = true
 end
