--- a/moduleroot/.travis.yml
+++ b/moduleroot/.travis.yml
@@ -18,24 +18,24 @@ env:
 matrix:
   exclude:
     # No support for Ruby 2.0 before Puppet 3.2
-    - rvm: 2.0.0
+    - rvm: '2.0'
       env: PUPPET_VERSION="~> 2.7.0"
-    - rvm: 2.0.0
+    - rvm: '2.0'
       env: PUPPET_VERSION="~> 3.0.0"
-    - rvm: 2.0.0
+    - rvm: '2.0'
       env: PUPPET_VERSION="~> 3.1.0"
     # Puppet < 3.5.0 is broken under ruby 2.1 https://tickets.puppetlabs.com/browse/PUP-1243
-    - rvm: 2.1.0
+    - rvm: '2.1'
       env: PUPPET_VERSION="~> 2.7.0"
-    - rvm: 2.1.0
+    - rvm: '2.1'
       env: PUPPET_VERSION="~> 3.0.0"
-    - rvm: 2.1.0
+    - rvm: '2.1'
       env: PUPPET_VERSION="~> 3.1.0"
-    - rvm: 2.1.0
+    - rvm: '2.1'
       env: PUPPET_VERSION="~> 3.2.0"
-    - rvm: 2.1.0
+    - rvm: '2.1'
       env: PUPPET_VERSION="~> 3.3.0"
-    - rvm: 2.1.0
+    - rvm: '2.1'
       env: PUPPET_VERSION="~> 3.4.0"
 
 deploy:
